--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -53,5 +53,8 @@ dependencies {
 
     //counterFab
     implementation 'com.github.andremion:counterfab:1.2.1'
+
+    //RecyclerView swipe decorator
+    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.1'
 
 }
