Colors changed UI bugs fixed Another Icon for field to load image Cleaner Code Do the last tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
 
     //using androidx instead of android support library
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha07'
@@ -59,14 +58,17 @@ dependencies {
     //counterFab
     implementation 'com.github.andremion:counterfab:1.2.1'
 
-    //RecyclerView swipe decorator
-    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.1'
 
     //Test Library
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
+    testImplementation 'org.robolectric:robolectric:3.0'
+    testImplementation "org.mockito:mockito-core:1.10.19"
+    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
 }
